--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Git & Github Tutorial</title>
 </head>
 <body>
-    <h1>10 Lệnh Git Cơ bản mà Developer phải nên biết</h1>
+    <h2>10 Lệnh Git Cơ bản mà Developer phải nên biết</h2>
+    <p>Anh là Chu Thương đẹp trai vipro 2021</p>
 </body>
 </html>
